# rpa

./: CMakeLists.txt  README.md
src/: BinarySearch.cpp  BinarySearch.h  CMakeLists.txt  Hartree_Fock.cpp  Hartree_Fock.h  array3.cpp  array3.h  calc_Raman.h  calc_Raman_bilayer.cpp  calc_binding_energy.h  calc_binding_energy_bilayer.cpp  calc_chemical_potential.cpp  calc_chemical_potential.h  calc_chemical_potential_bilayer.cpp  calc_current.h  calc_current_bilayer.cpp  calc_dispersion.cpp  calc_dispersion.h  calc_dispersion_cubic.cpp  calc_dispersion_square.cpp  calc_gap.cpp  calc_gap.h  calc_gap_bilayer.cpp  calc_gap_cubic.cpp  calc_gap_square.cpp  calc_gap_two_site.cpp  calc_gap_two_site.h  calc_intensity.h  calc_intensity_bilayer.cpp  calc_intensity_cubic.cpp  calc_intensity_square.cpp  calc_mean_field.cpp  calc_mean_field.h  calc_phase_boundary.h  calc_phase_boundary_bilayer.cpp  calc_single_particle_energy.cpp  calc_single_particle_energy.h  calc_spectrum.h  calc_spectrum_bilayer.cpp  calc_spectrum_cubic.cpp  (+52 more)
